# kronos

./: .dockerignore  .env.example  .env.prod.test  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dashboard  Dockerfile.dashboard.dockerignore  README.md  docker-compose.prod.yml  docker-compose.yml  flake.nix  health-checker-design.md  implementation-brief.md  justfile  kronos.postman_collection.json  schema-design.md  spec.md
crates/api/: Cargo.toml
crates/api/src/: dashboard.rs  extractors.rs  handlers.rs  main.rs  middleware.rs  router.rs
crates/api/src/handlers/: configs.rs  endpoints.rs  executions.rs  jobs.rs  mod.rs  organizations.rs  payload_specs.rs  secrets.rs  workspaces.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: client.rs  error_meta.rs  lib.rs  migrate.rs  operation.rs  protocol_serde.rs  types.rs
crates/client/src/client/: cancel_execution.rs  create_endpoint.rs  create_job.rs  customize.rs  delete_endpoint.rs  get_execution.rs  get_job.rs  get_job_status.rs  get_job_versions.rs  get_payload_spec.rs  list_endpoints.rs  list_execution_attempts.rs  list_execution_logs.rs  list_job_executions.rs  list_jobs.rs  list_payload_specs.rs  update_endpoint.rs  update_job.rs  update_payload_spec.rs
crates/client/src/config/: endpoint.rs
crates/client/src/operation/: create_endpoint.rs  create_job.rs  delete_endpoint.rs  delete_payload_spec.rs  get_endpoint.rs  get_job_status.rs  get_job_versions.rs  get_payload_spec.rs  list_endpoints.rs  list_execution_attempts.rs  list_execution_logs.rs  list_jobs.rs  list_payload_specs.rs  update_endpoint.rs  update_job.rs  update_payload_spec.rs
crates/client/src/operation/cancel_execution/: _cancel_execution_input.rs  _cancel_execution_output.rs  builders.rs
crates/client/src/operation/cancel_job/: _cancel_job_input.rs  builders.rs
crates/client/src/operation/create_endpoint/: _create_endpoint_input.rs  _create_endpoint_output.rs
crates/client/src/operation/create_job/: _create_job_input.rs  _create_job_output.rs  builders.rs
crates/client/src/operation/create_payload_spec/: _create_payload_spec_input.rs  _create_payload_spec_output.rs  builders.rs
crates/client/src/operation/delete_endpoint/: builders.rs
crates/client/src/operation/delete_payload_spec/: _delete_payload_spec_input.rs  _delete_payload_spec_output.rs  builders.rs
crates/client/src/operation/get_endpoint/: _get_endpoint_input.rs  _get_endpoint_output.rs
crates/client/src/operation/get_execution/: _get_execution_input.rs  _get_execution_output.rs  builders.rs
crates/client/src/operation/get_job/: _get_job_output.rs
crates/client/src/operation/get_job_status/: _get_job_status_output.rs  builders.rs
crates/client/src/operation/get_job_versions/: _get_job_versions_input.rs  _get_job_versions_output.rs
crates/client/src/operation/get_payload_spec/: builders.rs  (+2 more)
crates/client/src/protocol_serde/: shape_attempt_resource.rs  shape_attempt_resource_list.rs  shape_cancel_execution.rs  shape_cancel_job.rs  shape_create_endpoint.rs  shape_create_endpoint_input.rs  shape_create_job_input.rs  shape_create_payload_spec.rs  shape_create_payload_spec_input.rs  shape_endpoint_list.rs  shape_execution_log_resource.rs  shape_execution_resource.rs  shape_execution_resource_list.rs  shape_execution_summary.rs  shape_get_endpoint.rs  shape_get_execution.rs  shape_get_job_status.rs  shape_get_job_versions.rs  shape_get_payload_spec.rs  shape_internal_error.rs  shape_invalid_request_error.rs  shape_job_resource.rs  shape_job_status_response.rs  shape_job_summary.rs  shape_job_summary_list.rs  shape_job_version_list.rs  shape_list_execution_attempts.rs  shape_list_execution_logs.rs  shape_list_job_executions.rs  shape_list_jobs.rs  shape_list_payload_specs.rs  shape_not_found_error.rs  shape_payload_spec_list.rs  shape_payload_spec_resource.rs  shape_rate_limited_error.rs  shape_unprocessable_entity_error.rs  shape_update_endpoint.rs  shape_update_endpoint_input.rs  shape_update_job.rs  shape_update_job_input.rs  (+2 more)
crates/client/src/types/: _attempt_resource.rs  _attempt_status_enum.rs  _endpoint_resource.rs  _endpoint_type_enum.rs  _error_detail.rs  _execution_log_resource.rs  _execution_resource.rs  _execution_summary.rs  _job_status_enum.rs  _job_status_response.rs  _log_level_enum.rs  _payload_spec_resource.rs  _retry_policy.rs  _trigger_type_enum.rs  builders.rs
crates/client/tests/: migrate_kronos_namespace.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  crypto.rs  db.rs  env.rs  error.rs  kms.rs  lib.rs  metrics.rs  models.rs  pagination.rs  schema_config.rs  template.rs  tenant.rs
crates/common/src/cache/: config_cache.rs  mod.rs  secret_cache.rs
crates/common/src/db/: attempts.rs  configs.rs  endpoints.rs  execution_logs.rs  executions.rs  jobs.rs  mod.rs  organizations.rs  payload_specs.rs  scoped.rs  secrets.rs  workspaces.rs
crates/common/src/kms/: aws.rs  mock.rs  mod.rs
crates/common/src/migrations/: embedded.rs  mod.rs  render.rs
crates/common/src/models/: attempt.rs  config.rs  endpoint.rs  execution.rs  execution_log.rs  job.rs  mod.rs  organization.rs  payload_spec.rs  pg_cron_expr.rs  secret.rs  workspace.rs
crates/common/tests/: migrate_apply.rs
crates/dashboard/: Cargo.toml  Trunk.toml  index.html
crates/dashboard/src/: app.rs  config.rs  lib.rs  main.rs
crates/dashboard/src/api/: client.rs  models.rs
crates/dashboard/src/components/: confirm.rs  loading.rs  mod.rs  modal.rs  sidebar.rs  status_badge.rs
crates/dashboard/src/pages/: mod.rs  org_detail.rs  organizations.rs  workspace_detail.rs
crates/mock-server/: Cargo.toml
crates/mock-server/src/: main.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: cron_materializer.rs  delayed_promoter.rs  main.rs  stuck_reclaimer.rs
crates/worker/: Cargo.toml
crates/worker/src/: backoff.rs  client.rs  dispatcher.rs  lib.rs  main.rs  pipeline.rs  poller.rs  stuck_reclaimer.rs
crates/worker/src/dispatcher/: http.rs  kafka.rs  redis_stream.rs
haskell-example/: cabal.project  haskell-example.cabal
haskell-example/app/: Main.hs
(+115 files in other folders)
