[workspace]
members = [
    "crates/common",
    "crates/api",
    "crates/worker",
    "crates/scheduler",
    "crates/mock-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
actix-web = "4"
actix-rt = "2"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Kafka (feature-gated)
rdkafka = { version = "0.36", features = ["tokio"] }

# Redis (feature-gated)
redis = { version = "0.25", features = ["tokio-comp", "aio"] }

# Crypto
aes-gcm = "0.10"
rand = "0.8"

# JSON Schema validation
jsonschema = "0.18"

# Cron parsing
cron = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Concurrent hashmap
dashmap = "5"

# Config
envy = "0.4"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Base64
base64 = "0.22"

# Misc
dotenvy = "0.15"
