[package]
name = "kronos-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kronos-api"
path = "src/main.rs"

[dependencies]
kronos-common = { path = "../common" }
tokio.workspace = true
actix-web.workspace = true
actix-rt.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
jsonschema.workspace = true
cron.workspace = true
chrono-tz.workspace = true
actix-cors = "0.7"
