[package]
name = "kronos-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kronos-api"
path = "src/main.rs"

[features]
default = []
kms = ["kronos-common/kms"]

[dependencies]
kronos-common = { path = "../common" }
kronos-dashboard = { path = "../dashboard", features = ["ssr"] }
tokio.workspace = true
actix-web.workspace = true
actix-rt.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
jsonschema.workspace = true
cron.workspace = true
chrono-tz.workspace = true
actix-cors = "0.7"
actix-files = "0.6"
leptos = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true, features = ["ssr"] }
leptos_actix.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
