[package]
name = "kronos-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
kronos-common = { path = "../common" }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
