[package]
name = "kronos-common"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
actix-web.workspace = true
dashmap.workspace = true
aes-gcm.workspace = true
rand.workspace = true
base64.workspace = true
envy.workspace = true
jsonschema.workspace = true
cron.workspace = true
chrono-tz.workspace = true
dotenvy.workspace = true
