[package]
name = "kronos-common"
version.workspace = true
edition.workspace = true

[features]
default = []
kms = ["aws-config", "aws-sdk-kms"]

[dependencies]
aws-config = { workspace = true, optional = true }
aws-sdk-kms = { workspace = true, optional = true }
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
actix-web.workspace = true
dashmap.workspace = true
aes-gcm.workspace = true
rand.workspace = true
base64.workspace = true
jsonschema.workspace = true
cron.workspace = true
chrono-tz.workspace = true
dotenvy.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
