[package]
name = "kronos-dashboard"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
ssr = ["leptos/ssr", "leptos_router/ssr", "leptos_meta/ssr"]
hydrate = ["leptos/hydrate", "dep:gloo-net", "dep:wasm-bindgen-futures"]

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["Window", "Location"] }
js-sys = "0.3"
gloo-net = { version = "0.6", optional = true }
