[package]
name = "kronos-mock-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
actix-web.workspace = true
actix-rt.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
