[package]
name = "kronos-scheduler"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kronos-scheduler"
path = "src/main.rs"

[dependencies]
kronos-common = { path = "../common" }
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
cron.workspace = true
chrono-tz.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
