[package]
name = "kronos-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kronos-worker"
path = "src/main.rs"

[features]
default = []
kafka = ["rdkafka"]
redis-stream = ["redis"]
kms = ["kronos-common/kms"]
pg_cron = []

[dependencies]
kronos-common = { path = "../common" }
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
rand.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
tokio-util.workspace = true
async-trait.workspace = true

metrics.workspace = true

rdkafka = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
